docs/api/qiskit/0.43/qiskit.opflow.OperatorBase.mdx
---
title: OperatorBase
description: API reference for qiskit.opflow.OperatorBase
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.opflow.OperatorBase
---

# OperatorBase

<Class id="qiskit.opflow.OperatorBase" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.24/qiskit/opflow/operator_base.py" signature="OperatorBase">
  Bases: `StarAlgebraMixin`, `TensorMixin`, `ABC`

  Deprecated: A base class for all Operators: PrimitiveOps, StateFns, ListOps, etc. Operators are defined as functions which take one complex binary function to another. These complex binary functions are represented by StateFns, which are themselves a special class of Operators taking only the `Zero` StateFn to the complex binary function they represent.

  Operators can be used to construct complicated functions and computation, and serve as the building blocks for algorithms.

  <Admonition title="Deprecated since version 0.24.0" type="danger">
    The class `qiskit.opflow.operator_base.OperatorBase` is deprecated as of qiskit-terra 0.24.0. It will be removed no earlier than 3 months after the release date. For code migration guidelines, visit [https://qisk.it/opflow\_migration](https://qisk.it/opflow_migration).
  </Admonition>

  ## Methods Defined Here

  <span id="qiskit-opflow-operatorbase-add" />

  ### add

  <Function id="qiskit.opflow.OperatorBase.add" name="add" signature="abstract OperatorBase.add(other)">
    Return Operator addition of self and other, overloaded by `+`.

    **Parameters**

    **other** ([*OperatorBase*](qiskit.opflow.OperatorBase "qiskit.opflow.operator_base.OperatorBase")) – An `OperatorBase` with the same number of qubits as self, and in the same ‘Operator’, ‘State function’, or ‘Measurement’ category as self (i.e. the same type of underlying function).

    **Returns**

    An `OperatorBase` equivalent to the sum of self and other.

    **Return type**

    [*OperatorBase*](qiskit.opflow.OperatorBase "qiskit.opflow.operator_base.OperatorBase")
  </Function>

  <span id="qiskit-opflow-operatorbase-adjoint" />

  ### adjoint

  <Function id="qiskit.opflow.OperatorBase.adjoint" name="adjoint" signature="abstract OperatorBase.adjoint()">
    Return a new Operator equal to the Operator’s adjoint (conjugate transpose), overloaded by `~`. For StateFns, this also turns the StateFn into a measurement.

    **Returns**

    An `OperatorBase` equivalent to the adjoint of self.

    **Return type**

    [*OperatorBase*](qiskit.opflow.OperatorBase "qiskit.opflow.operator_base.OperatorBase")
  </Function>

  <span id="qiskit-opflow-operatorbase-assign-parameters" />

  ### assign\_parameters

  <Function id="qiskit.opflow.OperatorBase.assign_parameters" name="assign_parameters" signature="abstract OperatorBase.assign_parameters(param_dict)">
    Binds scalar values to any Terra `Parameters` in the coefficients or primitives of the Operator, or substitutes one `Parameter` for another. This method differs from Terra’s `assign_parameters` in that it also supports lists of values to assign for a give `Parameter`, in which case self will be copied for each parameterization in the binding list(s), and all the copies will be returned in an `OpList`. If lists of parameterizations are used, every `Parameter` in the param\_dict must have the same length list of parameterizations.

    **Parameters**

    **param\_dict** (*Dict\[*[*ParameterExpression*](qiskit.circuit.ParameterExpression "qiskit.circuit.parameterexpression.ParameterExpression")*, complex |* [*ParameterExpression*](qiskit.circuit.ParameterExpression "qiskit.circuit.parameterexpression.ParameterExpression")  *| List\[complex |*[*ParameterExpression*](qiskit.circuit.ParameterExpression "qiskit.circuit.parameterexpression.ParameterExpression")*]]*) – The dictionary of `Parameters` to replace, and values or lists of values by which to replace them.

    **Returns**

    The `OperatorBase` with the `Parameters` in self replaced by the values or `Parameters` in param\_dict. If param\_dict contains parameterization lists, this `OperatorBase` is an `OpList`.

    **Return type**

    [*OperatorBase*](qiskit.opflow.OperatorBase "qiskit.opflow.operator_base.OperatorBase")
  </Function>

  <span id="qiskit-opflow-operatorbase-bind-parameters" />

  ### bind\_parameters

  <Function id="qiskit.opflow.OperatorBase.bind_parameters" name="bind_parameters" signature="OperatorBase.bind_parameters(param_dict)">
    Same as assign\_parameters, but maintained for consistency with QuantumCircuit in Terra (which has both assign\_parameters and bind\_parameters).

    **Return type**

    [*OperatorBase*](qiskit.opflow.OperatorBase "qiskit.opflow.operator_base.OperatorBase")
  </Function>

  <span id="qiskit-opflow-operatorbase-compose" />

  ### compose

  <Function id="qiskit.opflow.OperatorBase.compose" name="compose" signature="abstract OperatorBase.compose(other, permutation=None, front=False)">
    Return Operator Composition between self and other (linear algebra-style: A\@B(x) = A(B(x))), overloaded by `@`.

    Note: You must be conscious of Quantum Circuit vs. Linear Algebra ordering conventions. Meaning, X.compose(Y) produces an X∘Y on qubit 0, but would produce a QuantumCircuit which looks like

    > -\[Y]-\[X]-

    Because Terra prints circuits with the initial state at the left side of the circuit.

    **Parameters**

    *   **other** ([*OperatorBase*](qiskit.opflow.OperatorBase "qiskit.opflow.operator_base.OperatorBase")) – The `OperatorBase` with which to compose self.
    *   **permutation** (*List\[int] | None*) – `List[int]` which defines permutation on other operator.
    *   **front** (*bool*) – If front==True, return `other.compose(self)`.

    **Returns**

    An `OperatorBase` equivalent to the function composition of self and other.

    **Return type**

    [*OperatorBase*](qiskit.opflow.OperatorBase "qiskit.opflow.operator_base.OperatorBase")
  </Function>

  <span id="qiskit-opflow-operatorbase-copy" />

  ### copy

  <Function id="qiskit.opflow.OperatorBase.copy" name="copy" signature="OperatorBase.copy()">
    Return a deep copy of the Operator.

    **Return type**

    [*OperatorBase*](qiskit.opflow.OperatorBase "qiskit.opflow.operator_base.OperatorBase")
  </Function>

  <span id="qiskit-opflow-operatorbase-equals" />

  ### equals

  <Function id="qiskit.opflow.OperatorBase.equals" name="equals" signature="abstract OperatorBase.equals(other)">
    Evaluate Equality between Operators, overloaded by `==`. Only returns True if self and other are of the same representation (e.g. a DictStateFn and CircuitStateFn will never be equal, even if their vector representations are equal), their underlying primitives are equal (this means for ListOps, OperatorStateFns, or EvolvedOps the equality is evaluated recursively downwards), and their coefficients are equal.

    **Parameters**

    **other** ([*OperatorBase*](qiskit.opflow.OperatorBase "qiskit.opflow.operator_base.OperatorBase")) – The `OperatorBase` to compare to self.

    **Returns**

    A bool equal to the equality of self and other.

    **Return type**

    bool
  </Function>

  <span id="qiskit-opflow-operatorbase-eval" />

  ### eval

  <Function id="qiskit.opflow.OperatorBase.eval" name="eval" signature="abstract OperatorBase.eval(front=None)">
    Evaluate the Operator’s underlying function, either on a binary string or another Operator. A square binary Operator can be defined as a function taking a binary function to another binary function. This method returns the value of that function for a given StateFn or binary string. For example, `op.eval('0110').eval('1110')` can be seen as querying the Operator’s matrix representation by row 6 and column 14, and will return the complex value at those “indices.” Similarly for a StateFn, `op.eval('1011')` will return the complex value at row 11 of the vector representation of the StateFn, as all StateFns are defined to be evaluated from Zero implicitly (i.e. it is as if `.eval('0000')` is already called implicitly to always “indexing” from column 0).

    If `front` is None, the matrix-representation of the operator is returned.

    **Parameters**

    **front** (*str | Dict\[str, complex] |* [*ndarray*](https://numpy.org/doc/stable/reference/generated/numpy.ndarray.html#numpy.ndarray "(in NumPy v1.25)")  *|*[*OperatorBase*](qiskit.opflow.OperatorBase "qiskit.opflow.operator_base.OperatorBase")  *|*[*Statevector*](qiskit.quantum_info.Statevector "qiskit.quantum_info.states.statevector.Statevector") *| None*) – The bitstring, dict of bitstrings (with values being coefficients), or StateFn to evaluated by the Operator’s underlying function, or None.

    **Returns**

    The output of the Operator’s evaluation function. If self is a `StateFn`, the result is a float or complex. If self is an Operator (`PrimitiveOp, ComposedOp, SummedOp, EvolvedOp,` etc.), the result is a StateFn. If `front` is None, the matrix-representation of the operator is returned, which is a `MatrixOp` for the operators and a `VectorStateFn` for state-functions. If either self or front contain proper `ListOps` (not ListOp subclasses), the result is an n-dimensional list of complex or StateFn results, resulting from the recursive evaluation by each OperatorBase in the ListOps.

    **Return type**

    [*OperatorBase*](qiskit.opflow.OperatorBase "qiskit.opflow.operator_base.OperatorBase") | complex
  </Function>

  <span id="qiskit-opflow-operatorbase-is-hermitian" />

  ### is\_hermitian

  <Function id="qiskit.opflow.OperatorBase.is_hermitian" name="is_hermitian" signature="OperatorBase.is_hermitian()">
    Return True if the operator is hermitian.

    Returns: Boolean value

    **Return type**

    bool
  </Function>

  <span id="qiskit-opflow-operatorbase-mul" />

  ### mul

  <Function id="qiskit.opflow.OperatorBase.mul" name="mul" signature="abstract OperatorBase.mul(scalar)">
    Returns the scalar multiplication of the Operator, overloaded by `*`, including support for Terra’s `Parameters`, which can be bound to values later (via `bind_parameters`).

    **Parameters**

    **scalar** (*complex |* [*ParameterExpression*](qiskit.circuit.ParameterExpression "qiskit.circuit.parameterexpression.ParameterExpression")) – The real or complex scalar by which to multiply the Operator, or the `ParameterExpression` to serve as a placeholder for a scalar factor.

    **Returns**

    An `OperatorBase` equivalent to product of self and scalar.

    **Return type**

    [*OperatorBase*](qiskit.opflow.OperatorBase "qiskit.opflow.operator_base.OperatorBase")
  </Function>

  <span id="qiskit-opflow-operatorbase-neg" />

  ### neg

  <Function id="qiskit.opflow.OperatorBase.neg" name="neg" signature="OperatorBase.neg()">
    Return the Operator’s negation, effectively just multiplying by -1.0, overloaded by `-`.

    **Returns**

    An `OperatorBase` equivalent to the negation of self.

    **Return type**

    [*OperatorBase*](qiskit.opflow.OperatorBase "qiskit.opflow.operator_base.OperatorBase")
  </Function>

  <span id="qiskit-opflow-operatorbase-permute" />

  ### permute

  <Function id="qiskit.opflow.OperatorBase.permute" name="permute" signature="abstract OperatorBase.permute(permutation)">
    Permutes the qubits of the operator.

    **Parameters**

    **permutation** (*List\[int]*) – A list defining where each qubit should be permuted. The qubit at index j should be permuted to position permutation\[j].

    **Returns**

    A new OperatorBase containing the permuted operator.

    **Raises**

    [**OpflowError**](qiskit.opflow.OpflowError "qiskit.opflow.OpflowError") – if indices do not define a new index for each qubit.

    **Return type**

    [*OperatorBase*](qiskit.opflow.OperatorBase "qiskit.opflow.operator_base.OperatorBase")
  </Function>

  <span id="qiskit-opflow-operatorbase-primitive-strings" />

  ### primitive\_strings

  <Function id="qiskit.opflow.OperatorBase.primitive_strings" name="primitive_strings" signature="abstract OperatorBase.primitive_strings()">
    Return a set of strings describing the primitives contained in the Operator. For example, `{'QuantumCircuit', 'Pauli'}`. For hierarchical Operators, such as `ListOps`, this can help illuminate the primitives represented in the various recursive levels, and therefore which conversions can be applied.

    **Returns**

    A set of strings describing the primitives contained within the Operator.

    **Return type**

    *Set*\[str]
  </Function>

  <span id="qiskit-opflow-operatorbase-reduce" />

  ### reduce

  <Function id="qiskit.opflow.OperatorBase.reduce" name="reduce" signature="abstract OperatorBase.reduce()">
    Try collapsing the Operator structure, usually after some type of conversion, e.g. trying to add Operators in a SummedOp or delete needless IGates in a CircuitOp. If no reduction is available, just returns self.

    **Returns**

    The reduced `OperatorBase`.
  </Function>

  <span id="qiskit-opflow-operatorbase-tensor" />

  ### tensor

  <Function id="qiskit.opflow.OperatorBase.tensor" name="tensor" signature="abstract OperatorBase.tensor(other)">
    Return tensor product between self and other, overloaded by `^`. Note: You must be conscious of Qiskit’s big-endian bit printing convention. Meaning, X.tensor(Y) produces an X on qubit 0 and an Y on qubit 1, or X⨂Y, but would produce a QuantumCircuit which looks like

    > -\[Y]- -\[X]-

    Because Terra prints circuits and results with qubit 0 at the end of the string or circuit.

    **Parameters**

    **other** ([*OperatorBase*](qiskit.opflow.OperatorBase "qiskit.opflow.operator_base.OperatorBase")) – The `OperatorBase` to tensor product with self.

    **Returns**

    An `OperatorBase` equivalent to the tensor product of self and other.

    **Return type**

    [*OperatorBase*](qiskit.opflow.OperatorBase "qiskit.opflow.operator_base.OperatorBase")
  </Function>

  <span id="qiskit-opflow-operatorbase-tensorpower" />

  ### tensorpower

  <Function id="qiskit.opflow.OperatorBase.tensorpower" name="tensorpower" signature="abstract OperatorBase.tensorpower(other)">
    Return tensor product with self multiple times, overloaded by `^`.

    **Parameters**

    **other** (*int*) – The int number of times to tensor product self with itself via `tensorpower`.

    **Returns**

    An `OperatorBase` equivalent to the tensorpower of self by other.

    **Return type**

    [*OperatorBase*](qiskit.opflow.OperatorBase "qiskit.opflow.operator_base.OperatorBase") | int
  </Function>

  <span id="qiskit-opflow-operatorbase-to-circuit-op" />

  ### to\_circuit\_op

  <Function id="qiskit.opflow.OperatorBase.to_circuit_op" name="to_circuit_op" signature="abstract OperatorBase.to_circuit_op()">
    Returns a `CircuitOp` equivalent to this Operator.

    **Return type**

    [*OperatorBase*](qiskit.opflow.OperatorBase "qiskit.opflow.operator_base.OperatorBase")
  </Function>

  <span id="qiskit-opflow-operatorbase-to-matrix" />

  ### to\_matrix

  <Function id="qiskit.opflow.OperatorBase.to_matrix" name="to_matrix" signature="abstract OperatorBase.to_matrix(massive=False)">
    Return NumPy representation of the Operator. Represents the evaluation of the Operator’s underlying function on every combination of basis binary strings. Warn if more than 16 qubits to force having to set `massive=True` if such a large vector is desired.

    **Returns**

    The NumPy `ndarray` equivalent to this Operator.

    **Return type**

    [*ndarray*](https://numpy.org/doc/stable/reference/generated/numpy.ndarray.html#numpy.ndarray "(in NumPy v1.25)")
  </Function>

  <span id="qiskit-opflow-operatorbase-to-matrix-op" />

  ### to\_matrix\_op

  <Function id="qiskit.opflow.OperatorBase.to_matrix_op" name="to_matrix_op" signature="abstract OperatorBase.to_matrix_op(massive=False)">
    Returns a `MatrixOp` equivalent to this Operator.

    **Return type**

    [*OperatorBase*](qiskit.opflow.OperatorBase "qiskit.opflow.operator_base.OperatorBase")
  </Function>

  <span id="qiskit-opflow-operatorbase-to-spmatrix" />

  ### to\_spmatrix

  <Function id="qiskit.opflow.OperatorBase.to_spmatrix" name="to_spmatrix" signature="OperatorBase.to_spmatrix()">
    Return SciPy sparse matrix representation of the Operator. Represents the evaluation of the Operator’s underlying function on every combination of basis binary strings.

    **Returns**

    The SciPy `spmatrix` equivalent to this Operator.

    **Return type**

    *spmatrix*
  </Function>

  ## Attributes

  ### INDENTATION

  <Attribute id="qiskit.opflow.OperatorBase.INDENTATION" name="INDENTATION" attributeValue="= '  '" />

  ### instance\_id

  <Attribute id="qiskit.opflow.OperatorBase.instance_id" name="instance_id">
    Return the unique instance id.
  </Attribute>

  ### num\_qubits

  <Attribute id="qiskit.opflow.OperatorBase.num_qubits" name="num_qubits">
    The number of qubits over which the Operator is defined. If `op.num_qubits == 5`, then `op.eval('1' * 5)` will be valid, but `op.eval('11')` will not.

    **Returns**

    The number of qubits accepted by the Operator’s underlying function.
  </Attribute>

  ### parameters

  <Attribute id="qiskit.opflow.OperatorBase.parameters" name="parameters">
    Return a set of Parameter objects contained in the Operator.
  </Attribute>

  ### settings

  <Attribute id="qiskit.opflow.OperatorBase.settings" name="settings">
    Return settings of this object in a dictionary.

    You can, for example, use this `settings` dictionary to serialize the object in JSON format, if the JSON encoder you use supports all types in the dictionary.

    **Returns**

    Object settings in a dictionary.
  </Attribute>
</Class>

